Adding new colortheme and re-formatting others.

--- a/GWtheme/beamercolorthemeMPI.sty
+++ b/GWtheme/beamercolorthemeMPI.sty
@@ -1,34 +1,53 @@
 %% start of file `beamercolorthemeMPI.sty'.
 % Author: Max Melching (m-melching@web.de), 2025
 %
-% Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
+% Acknowledgements: this theme is a based on the UC Berkeley beamer theme.
+% The file structure, however, follows the DTU template from
+% https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
+
 
 \RequirePackage{xcolor}
 
-\definecolor{MPIGreen}{HTML}{007977}
+% -- General MPI colors -------------------------------------------------------
+% -- Source: https://resources.mpi-inf.mpg.de/logo/mpg/documentation/MPG-Web-Styleguide-2023-Version-1-2.pdf
+\definecolor{MPIGreen}{HTML}{006C66}
+\definecolor{MPIBlack}{HTML}{000000}
+\definecolor{MPIGray}{HTML}{666666}
+\definecolor{MPIBGGray}{HTML}{EEEEEE}
+\definecolor{MPILightGray}{HTML}{F6F6F6}
+
+
+% -- MPI for Gravitational Physics colors -------------------------------------
 \definecolor{MPIGravDarkRed}{HTML}{ad0000}
 \definecolor{MPIGravLightRed}{HTML}{e0969a}
-\definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
+
+
+% -- Some custom additions for this theme -------------------------------------
+\colorlet{MPILightGreen}{MPIGreen!50}  % Not part of official colortheme, but nice as background
+
+\definecolor{MPDLOrange}{HTML}{f47828}  % From https://www.mpdl.mpg.de/
+
+% \definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
 % \definecolor{FontColor}{HTML}{29485d}  % Background color from official Max Planck Powerpoint templates
 \definecolor{FontColor}{rgb}{0.1, 0.1, 0.44}  % Midnightblue
 
-\setbeamercolor{titlelike}{fg=MPIGreen,bg=MPIGreen!36}
-\setbeamercolor{headline}{fg=MPIGreen,bg=MPIGreen!36}
+
+% -- Actual theme definition --------------------------------------------------
+\setbeamercolor{titlelike}{fg=MPIGreen,bg=MPILightGreen}
+\setbeamercolor{headline}{fg=MPIGreen,bg=MPILightGreen}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
-% \setbeamercolor{title page}{fg=MPIGreen,bg=MPIGreen!36}
-% \setbeamercolor{title page}{fg=FontColor,bg=white}  % Creates nice purple on titlepage
-\setbeamercolor{title page}{fg=MPIGreen,bg=FontColor!50}  % Creates nice bluish tone on titlepage
+% \setbeamercolor{title page}{fg=MPILightGreen!50!FontColor}  % Creates nice bluish tone on titlepage
+\setbeamercolor{title page}{fg=MPIGreen,bg=MPILightGreen}  % bg has no effect
 
 \setbeamercolor{normal text}{fg=FontColor}
 \setbeamercolor{structure}{fg=FontColor}
-\setbeamercolor{block title}{fg=MPIGreen,bg=MPIGreen!10}
-% \setbeamercolor{block body}{fg=black,bg=MPIGreen!20}
-\setbeamercolor{block body}{fg=black,bg=gray!10}
+\setbeamercolor{block title}{fg=MPIGreen,bg=MPILightGreen}
+\setbeamercolor{block body}{fg=black,bg=MPIBGGray}
 
 \setbeamercolor{itemize item}{fg=MPIGreen}
 \setbeamercolor{itemize subitem}{fg=MPIGreen}
 \setbeamercolor{itemize subsubitem}{fg=MPIGreen}
 
-\setbeamercolor{section page}{fg=MPIGreen, bg=MPIGreen!36}
-\setbeamercolor{subsection page}{fg=MPIGreen, bg=MPIGreen!36}
+\setbeamercolor{section page}{fg=MPIGreen, bg=MPILightGreen}
+\setbeamercolor{subsection page}{fg=MPIGreen, bg=MPILightGreen}
