--- a/GWtheme/beamercolorthemeMPIGrav.sty
+++ b/GWtheme/beamercolorthemeMPIGrav.sty
@@ -1,17 +1,38 @@
 %% start of file `beamercolorthemeMPIGrav.sty'.
 % Author: Max Melching (m-melching@web.de), 2025
 %
-% Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
+% Acknowledgements: this theme is a based on the UC Berkeley beamer theme.
+% The file structure, however, follows the DTU template from
+% https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
+
 
 \RequirePackage{xcolor}
 
-\definecolor{MPIGreen}{HTML}{007977}
+% -- General MPI Colors -------------------------------------------------------
+% -- Source: https://resources.mpi-inf.mpg.de/logo/mpg/documentation/MPG-Web-Styleguide-2023-Version-1-2.pdf
+\definecolor{MPIGreen}{HTML}{006C66}
+\definecolor{MPIBlack}{HTML}{000000}
+\definecolor{MPIGray}{HTML}{666666}
+\definecolor{MPIBGGray}{HTML}{EEEEEE}
+\definecolor{MPILightGray}{HTML}{F6F6F6}
+
+
+% -- MPI for Gravitational Physics Colors -------------------------------------
 \definecolor{MPIGravDarkRed}{HTML}{ad0000}
 \definecolor{MPIGravLightRed}{HTML}{e0969a}
-\definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
+
+
+% -- Some custom additions for this theme -------------------------------------
+\colorlet{MPILightGreen}{MPIGreen!50}  % Not part of official colortheme, but nice as background
+
+\definecolor{MPDLOrange}{HTML}{f47828}  % From https://www.mpdl.mpg.de/
+
+% \definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
 % \definecolor{FontColor}{HTML}{29485d}  % Background color from official Max Planck Powerpoint templates
 \definecolor{FontColor}{rgb}{0.1, 0.1, 0.44}  % Midnightblue
 
+
+% -- Actual theme definition --------------------------------------------------
 \setbeamercolor{titlelike}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
 \setbeamercolor{headline}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
 \setbeamercolor{footline}{fg=white,bg=}
