--- a/GWtheme/beamercolorthemeMPIMixed.sty
+++ b/GWtheme/beamercolorthemeMPIMixed.sty
@@ -1,4 +1,4 @@
-%% start of file `beamercolorthemeMPIGravMixed.sty'.
+%% start of file `beamercolorthemeMPIMixed.sty'.
 % Author: Max Melching (m-melching@web.de), 2025
 %
 % Acknowledgements: this theme is a based on the UC Berkeley beamer theme.
@@ -33,21 +33,23 @@
 
 
 % -- Actual theme definition --------------------------------------------------
-\setbeamercolor{titlelike}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
-\setbeamercolor{headline}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
+\setbeamercolor{titlelike}{fg=MPDLOrange,bg=MPDLOrange!36}
+\setbeamercolor{headline}{fg=MPDLOrange,bg=MPDLOrange!36}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
-\setbeamercolor{title page}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
+% \setbeamercolor{title page}{fg=MPIGreen,bg=MPIGreen!36}
+% \setbeamercolor{title page}{fg=FontColor,bg=white}  % Creates nice purple on titlepage
+\setbeamercolor{title page}{fg=MPIGreen,bg=FontColor!50}  % Creates nice bluish tone on titlepage
 
 \setbeamercolor{normal text}{fg=FontColor}
 \setbeamercolor{structure}{fg=FontColor}
-% \setbeamercolor{block title}{fg=MPIGravDarkRed,bg=MPIGravLightRed!50}
 \setbeamercolor{block title}{fg=MPIGreen,bg=MPIGreen!10}
+% \setbeamercolor{block body}{fg=black,bg=MPIGreen!20}
 \setbeamercolor{block body}{fg=black,bg=gray!10}
 
 \setbeamercolor{itemize item}{fg=MPIGreen}
 \setbeamercolor{itemize subitem}{fg=MPIGreen}
 \setbeamercolor{itemize subsubitem}{fg=MPIGreen}
 
-\setbeamercolor{section page}{fg=MPIGravDarkRed, bg=MPIGravLightRed}
-\setbeamercolor{subsection page}{fg=MPIGravDarkRed, bg=MPIGravLightRed}
+\setbeamercolor{section page}{fg=MPDLOrange, bg=MPDLOrange!36}
+\setbeamercolor{subsection page}{fg=MPDLOrange, bg=MPDLOrange!36}
