--- a/GWtheme/beamercolorthemeCaltech.sty
+++ b/GWtheme/beamercolorthemeCaltech.sty
@@ -1,12 +1,15 @@
 %% start of file `beamercolorthemeCaltech.sty'.
 % Author: Max Melching (m-melching@web.de), 2025
 %
-% Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
+% Acknowledgements: this theme is a based on the UC Berkeley beamer theme.
+% The file structure, however, follows the DTU template from
+% https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
 
 
-% -- Source for colors: https://identity.caltech.edu/colors
 \RequirePackage{xcolor}
 
+% -- General Caltech colors ---------------------------------------------------
+% -- Source: https://identity.caltech.edu/colors
 \definecolor{CaltechOrange}{HTML}{FF6C0C}
 \definecolor{CaltechDarkBlue}{HTML}{003B4C}
 \definecolor{CaltechDarkGreen}{HTML}{005851}
@@ -18,11 +21,14 @@
 \definecolor{CaltechGreenGrey}{HTML}{849895}
 \definecolor{FontColor}{HTML}{003262}
 
+
+% -- Actual theme definition --------------------------------------------------
 \setbeamercolor{titlelike}{fg=CaltechOrange,bg=CaltechOrange!36}
 \setbeamercolor{headline}{fg=CaltechOrange,bg=CaltechOrange!36}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=CaltechDarkBlue,bg=white}
-\setbeamercolor{title page}{fg=CaltechDarkGreen,bg=CaltechDarkGreen!36}
+% \setbeamercolor{title page}{fg=CaltechDarkGreen,bg=CaltechDarkGreen!36}
+\setbeamercolor{title page}{fg=CaltechDarkBlue,bg=CaltechDarkBlue!36}
 
 \setbeamercolor{normal text}{fg=FontColor}
 \setbeamercolor{structure}{fg=FontColor}
@@ -30,9 +36,9 @@
 \setbeamercolor{block title}{fg=CaltechOrange,bg=CaltechOrange!20}
 \setbeamercolor{block body}{fg=black,bg=gray!10}
 
-\setbeamercolor{itemize item}{fg=CaltechOrange}
-\setbeamercolor{itemize subitem}{fg=CaltechOrange}
-\setbeamercolor{itemize subsubitem}{fg=CaltechOrange}
+\setbeamercolor{itemize item}{fg=CaltechDarkGreen}
+\setbeamercolor{itemize subitem}{fg=CaltechDarkGreen}
+\setbeamercolor{itemize subsubitem}{fg=CaltechDarkGreen}
 
 \setbeamercolor{section page}{fg=CaltechOrange, bg=CaltechOrange!42}
 \setbeamercolor{subsection page}{fg=CaltechOrange, bg=CaltechOrange!42}
